@@ -1,5 +1,7 @@
+20.may (ws)
+      - new: fret diagram editor
 19.may (ws)
-      - new: fret diagram
+      - new: fret diagrams
 18.may (ws)
       - new: more Pedal line types
 17.may (ws)
